@@ -1,5 +1,13 @@
 2005-11-16  Vincent Noel  <vincent.noel@gmail.com>
 
+	* log_repaint.c: (logview_unbold_rows),
+	(logview_add_new_log_lines), (logview_scroll_and_focus_path),
+	(log_fill_model_date):
+	* logrtns.c: (log_open):
+	* logrtns.h: cleanups and fixes for potential sync problems.
+
+2005-11-16  Vincent Noel  <vincent.noel@gmail.com>
+
 	* log_repaint.c (logview_show_busy_cursor): New. Only show the busy
 	  cursor after a short delay.
 	  (logview_create_model): Try not to make the cursor flicker.
